tests/src/frontend/expand/invalid/macro_duplicate.sk
class C() {
  macro fun m(): void {
    #forEachField (#thisClassName) #thisClassName
  }
}

fun main(): void {
  void
}
